# InicCientifica

./: README.md  pyproject.toml
DEQ-Exemplos/: README.md  SuspensaoAtivaDEQ.py
DEQ-Exemplos/SuspensaoAtiva/: SuspensaoAtivaDEQ.py
MPC_to_NN/DEQ - Shaojie Bai/: DEQ.py  SuspensaoAtivaDEQ.py
MPC_to_NN/MPCvsNN - Drummond/: README.md  run_sim correto.py  run_sim.ipynb  run_sim.py
MPC_to_NN/MPCvsNN - Sistema Compressão/: MPC_Posicional_Drummond.py  MPC_Regulatorio.py  MPC_SetPoint.m  MPC_SetPoint.py  MPC_SetPoint_Norm.py  run_sim.ipynb  run_sim.py  teste.py
NNMPC/: CAMPC.py  CA_Model.py  Compare.py  MPC.py  NNMPC.py  NN_Model.py  Run.py  Testes.py
NNMPC/Compressão Complexo/: CA_Model.py
NNMPC/Compressão Complexo/libs/: eos_database.py  gc_eos_soave.py  plenum_system.py  species_builder.py
NNMPC/Compressão Simples/: CA_Model.py  NNMPC.py  Testes.py
NNMPC/Compressão Simples/libs/: melhores_parametros.txt  modelo_treinado.pth  simulationn.py
NNMPC/libs/: Interpolation.py  melhores_parametros.txt  melhores_parametrosbom.txt  modelo.onnx  modelo_treinado.pth  resultados_CAMPC.pkl  resultados_NNMPC.pkl  simulationn.py
Neural Network MPC/: NN_Model.py
Neural Network MPC/libs/: simulationn.py
Non-Linear MPC/examples_CasADi/: NMPC.m
Non-Linear MPC/jacketed_tank/: NMPC.m  open_loop_sim.m
Sistema de Compressão/: NumSol - Rotação.py  modelo.onnx  modelo_treinado.pth
Sistema de Compressão/libs/: Model.py
