[project]
name = "iniccientifica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.3"
dependencies = [
    "casadi>=3.7.0",
    "control>=0.10.2",
    "cvxpy>=1.7.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "spyder-kernels>=3.0.5",
    "torch>=2.7.0",
    "torchdeq>=0.1.0",
]
